recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:5: error: type mismatch;
 found   : Unit
 required: Int
	if(l.head == v){
        ^